--- a/app/src/main/res/drawable/ic_cancel.xml
+++ b/app/src/main/res/drawable/ic_cancel.xml
@@ -1,9 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="19dp"
-    android:height="19dp"
-    android:viewportWidth="19"
-    android:viewportHeight="19">
+    android:width="40dp"
+    android:height="40dp"
+    android:viewportWidth="40"
+    android:viewportHeight="40">
   <path
-      android:pathData="M11.124,9.5L18.027,16.403C18.476,16.852 18.476,17.578 18.027,18.027C17.578,18.476 16.852,18.476 16.403,18.027L9.5,11.124L2.597,18.027C2.148,18.476 1.422,18.476 0.973,18.027C0.524,17.578 0.524,16.852 0.973,16.403L7.876,9.5L0.973,2.597C0.524,2.148 0.524,1.422 0.973,0.973C1.197,0.749 1.491,0.636 1.785,0.636C2.079,0.636 2.373,0.749 2.597,0.973L9.5,7.876L16.403,0.973C16.627,0.749 16.921,0.636 17.215,0.636C17.509,0.636 17.803,0.749 18.027,0.973C18.476,1.422 18.476,2.148 18.027,2.597L11.124,9.5Z"
-      android:fillColor="#ffffff"/>
+      android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
+      android:strokeAlpha="0.05"
+      android:fillColor="#E71D36"
+      android:fillAlpha="0.05"/>
+  <path
+      android:pathData="M20.916,20L24.81,23.894C25.063,24.147 25.063,24.557 24.81,24.81C24.557,25.063 24.147,25.063 23.894,24.81L20,20.916L16.106,24.81C15.853,25.063 15.443,25.063 15.19,24.81C14.937,24.557 14.937,24.147 15.19,23.894L19.084,20L15.19,16.106C14.937,15.853 14.937,15.443 15.19,15.19C15.316,15.064 15.482,15 15.648,15C15.814,15 15.98,15.064 16.106,15.19L20,19.084L23.894,15.19C24.02,15.064 24.186,15 24.352,15C24.518,15 24.684,15.064 24.81,15.19C25.063,15.443 25.063,15.853 24.81,16.106L20.916,20Z"
+      android:strokeAlpha="0.8"
+      android:fillColor="#E71D36"
+      android:fillAlpha="0.8"/>
 </vector>
