--- a/app/src/main/res/layout/activity_bills_payment.xml
+++ b/app/src/main/res/layout/activity_bills_payment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AccountOpeningActivity">
+    tools:context=".BillsPaymentActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout11"
@@ -31,36 +31,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Select Merchant"
+            android:text="Bills Payment"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
 
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/textfield"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/textfield_bg"
-        android:hint="Search Merchant Name..."
-        android:paddingStart="30dp"
-        android:paddingEnd="4dp"
-        android:paddingVertical="3dp"
-        android:textSize="15sp"
-        android:layout_margin="30dp"
-        android:drawableEnd="@drawable/ic_search_suffix"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout11" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="30dp"
-        android:paddingVertical="10dp"
+        android:paddingHorizontal="30dp"
+        android:paddingVertical="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textfield">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -69,25 +55,26 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#F7F5FF"
-                android:paddingVertical="12dp"
-                android:paddingHorizontal="34dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_bank"/>
+                android:layout_width="138dp"
+                android:layout_height="138dp"
+                android:paddingVertical="15dp"
+                android:paddingHorizontal="30dp"
+                android:orientation="vertical"
+                android:gravity="right"
+                android:background="@drawable/ic_cable_bg"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="17dp"
-                    android:text="PIGGY VEST"
-                    android:textColor="@color/black"
-                    android:textSize="12sp"/>
-            </LinearLayout>
+            <View
+                android:layout_width="30dp"
+                android:layout_height="0dp" />
+
+            <LinearLayout
+                android:layout_width="138dp"
+                android:layout_height="138dp"
+                android:paddingVertical="15dp"
+                android:paddingHorizontal="30dp"
+                android:orientation="vertical"
+                android:gravity="right"
+                android:background="@drawable/ic_elec_bg"/>
         </LinearLayout>
 
     </ScrollView>
