--- a/app/src/main/res/layout/custom_textfield.xml
+++ b/app/src/main/res/layout/custom_textfield.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:id="@+id/labelHolder"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <TextView
             android:id="@+id/label"
             android:layout_width="wrap_content"
