--- a/app/src/main/res/layout/dashboard_view.xml
+++ b/app/src/main/res/layout/dashboard_view.xml
@@ -210,53 +210,53 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
-                <LinearLayout
-                    android:id="@+id/background"
-                    android:layout_width="match_parent"
-                    android:layout_height="116dp"
-                    android:layout_marginHorizontal="15dp"
-                    android:paddingHorizontal="20dp"
-                    android:paddingBottom="23dp"
-                    android:paddingTop="15dp"
-                    android:background="@drawable/ic_dash_bg7"
-                    android:orientation="vertical"
-                    android:layout_marginBottom="20dp">
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/background"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="116dp"-->
+<!--                    android:layout_marginHorizontal="15dp"-->
+<!--                    android:paddingHorizontal="20dp"-->
+<!--                    android:paddingBottom="23dp"-->
+<!--                    android:paddingTop="15dp"-->
+<!--                    android:background="@drawable/ic_dash_bg7"-->
+<!--                    android:orientation="vertical"-->
+<!--                    android:layout_marginBottom="20dp">-->
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/constraint"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+<!--                    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                        android:id="@+id/constraint"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="match_parent">-->
 
-                        <ImageView
-                            android:id="@+id/imageView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_arrow_right"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+<!--                        <ImageView-->
+<!--                            android:id="@+id/imageView"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:src="@drawable/ic_arrow_right"-->
+<!--                            app:layout_constraintEnd_toEndOf="parent"-->
+<!--                            app:layout_constraintTop_toTopOf="parent" />-->
 
-                        <ImageView
-                            android:id="@+id/dashImage"
-                            android:layout_width="65dp"
-                            android:layout_height="65dp"
-                            android:layout_marginEnd="65dp"
-                            android:src="@drawable/dash_icon7"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+<!--                        <ImageView-->
+<!--                            android:id="@+id/dashImage"-->
+<!--                            android:layout_width="65dp"-->
+<!--                            android:layout_height="65dp"-->
+<!--                            android:layout_marginEnd="65dp"-->
+<!--                            android:src="@drawable/dash_icon7"-->
+<!--                            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                            app:layout_constraintEnd_toEndOf="parent"-->
+<!--                            app:layout_constraintTop_toBottomOf="@+id/imageView" />-->
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:lineHeight="22dp"
-                            android:text="Customer\nservice"
-                            android:textColor="@color/white"
-                            android:textSize="14sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--                        <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:lineHeight="22dp"-->
+<!--                            android:text="Customer\nservice"-->
+<!--                            android:textColor="@color/white"-->
+<!--                            android:textSize="14sp"-->
+<!--                            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                            app:layout_constraintStart_toStartOf="parent" />-->
+<!--                    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
-                </LinearLayout>
+<!--                </LinearLayout>-->
 
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
