--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="dark2C">#2C2948</color>
     <color name="text93">#938CA8</color>
     <color name="text1E">#1E1147</color>
+    <color name="green">#48A08D</color>
+    <color name="orange">#FFA927</color>
 </resources>
